the CHAT part works well now

--- a/src/css/_chat-item.scss
+++ b/src/css/_chat-item.scss
@@ -1,11 +1,11 @@
 .chat-item {
 	width:100%;	
 	flex: 0 0 auto;
-	margin: 15px 0;
+	padding: 7px 0;
 }
 
 .chat-item:first-child {
-	padding-top: 22vh;
+	padding-top: 12vh;
 }
 
 .chat-item--inner {
