--- a/src/style.scss
+++ b/src/style.scss
@@ -81,6 +81,7 @@ $font-header:  'Work Sans','Open Sans','San Francisco','Roboto','Arial', sans-se
 @import "./css/chat-input";
 @import "./css/chat-list";
 @import "./css/chat-item";
+@import "./css/giphy-browser";
 
 
 
