--- a/src/css/_chat-input.scss
+++ b/src/css/_chat-input.scss
@@ -1,7 +1,7 @@
 .chat-input {
   width:100%;
   display: flex;
-  flex-direction:rows;
+  flex-direction:row;
   justify-content:center;
   align-items:center;
   border-top:1px solid $chat-input-border;
