--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -32,6 +32,7 @@ body, html {
 	width:100%;
 	flex:  1 1 auto;
 	position:relative;
+	transition: all 333ms ease;
 }	
 
 .chat-lower {
@@ -39,6 +40,7 @@ body, html {
 	width:100%;
 	flex: 0 0 auto;
 	background-color: $chat-lower;
+	transition: all 333ms ease;
 }
 
 
