--- a/src/css/_giphy-browser.scss
+++ b/src/css/_giphy-browser.scss
@@ -1,24 +1,90 @@
 .giphy-browser{
   position: fixed;
-  top: 0;;
+  top: 0;
   height: 100vh;
-  width: 33vw;
+  width: 40vw;
   background: black;
-  transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%, 0, 0);
   transition: all 333ms ease;
-
   .gif-list-container {
     position: relative;
     height: 100%;
     width: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 40px 0;
   }
   .gif-wrapper{
     width: 100%;
     padding: 5px;
+    position: relative;
     .gif{
-      max-width: 100%;
+      width: 100%;
+      padding-top: 100%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    .giphy-gif--category-background{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      top: 0;
+      background: -moz-linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(127,127,127,0) 50%, rgba(0,0,0,1) 100%); /* ff3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(50%, rgba(127,127,127,0)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
+      background: -webkit-linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(127,127,127,0) 50%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
+      background: -o-linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(127,127,127,0) 50%, rgba(0,0,0,1) 100%); /* opera 11.10+ */
+      background: -ms-linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(127,127,127,0) 50%, rgba(0,0,0,1) 100%); /* ie10+ */
+      background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(127,127,127,0) 50%, rgba(0,0,0,1) 100%); /* w3c */
+    }
+    .giphy-gif--category-title {
+      position: absolute;
+      left: 7px;
+      right: 7px;
+      bottom: 7px;
+      color: #ffffff;
+      text-transform: capitalize;
+    }
+  }
+
+  .giphy-attrib{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    max-width: 66%;
+    margin: 5px;
+  }
+
+  .giphy-nav-title {
+    color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    background: #FC5287;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    .giphy-title {
+      margin: auto;
+      flex-shrink: 1;
+      font-weight: 700;
+      text-transform: capitalize;
+      font-size: 16px;
+      text-align: right;
+    }
+    .giphy-back{
+      margin: auto 0;
+      height: 16px;
+      flex-shrink: 0;
+      width: 40px;
+      img{
+        max-height: 100%;
+        vertical-align: top;
+      }
     }
   }
 }
