- added loader - added npm run scripts (instead of gulp)

--- a/src/css/_giphy-browser.scss
+++ b/src/css/_giphy-browser.scss
@@ -87,4 +87,45 @@
       }
     }
   }
+
+  .loader {
+    position: relative;
+    height: 100%;
+    width: 50%;
+    text-align: center;
+    font-size: 1.2em;
+    color: #555;
+    display: flex;
+    margin: auto;
+    svg {
+      width: 100%;
+      margin: auto;
+    }
+  }
+
+  $delays: 0 125ms 250ms .375s;
+  @for $i from 1 through 4 {
+    .circle#{$i} {
+      animation: bounce linear 2.2s infinite forwards;
+      animation-delay: nth($delays, $i);
+    }
+  }
+
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    20%, 50% {
+      transform: translateY(9px);
+    }
+    80% {
+      transform: translateY(2px)
+    }
+    40% {
+      transform: translateY(-15px);
+    }
+    60% {
+      transform: translateY(-7px);
+    }
+  }
 }
