--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,8 @@ body, html {
   left:0;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .chat {
