completely overhauled build system

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -172,7 +172,7 @@ $prefix-for-spec:      true !default; // required for keyframe mixin
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox; // IE 10
-  display: box;
+  display: flex;
 }
 
 @mixin box-orient($orient: inline-axis) {
@@ -229,7 +229,7 @@ $prefix-for-spec:      true !default; // required for keyframe mixin
     // 2009
     display: -webkit-box;
     display: -moz-box;
-    display: box;
+    display: flex;
 
     // 2012
     display: -webkit-flex;
