--- a/src/css/_chat-item.scss
+++ b/src/css/_chat-item.scss
@@ -4,7 +4,7 @@
 .chat-item {
   width:100%;
   flex: 0 0 auto;
-  padding: calc-em(10px) 0;
+  padding: calc-em(10px) 0 0;
   &:last-child{
     padding-bottom: calc-em(10px)!important;
   }
@@ -90,6 +90,9 @@
   word-wrap: break-word;
   line-height: 1;
   cursor: pointer;
+  display: block;
+  max-width: 80vw;
+  margin: 1px 0;
 }
 
 
