added oembed via iframely

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,6 +15,7 @@
     var x=e.getElementsByTagName(b)[0];x.parentNode.insertBefore(s,x);})
   (window,document,'script','https://{d}/bebo.min.js?v=<%= htmlWebpackPlugin.options.version %>');
 </script>
+<script src="//cdn.iframe.ly/embed.js?api_key=a09c4dfedf62021c92999a" async></script>
 <div id="root">
   <div class="initial-load-container">
     <div class="loader">
